--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                             <li><strong>10h00-10h15</strong> Coffe Break</li>
                             <li><strong>10h15-11h00:</strong> Dinâmica: Planejamento - Silvana</li>
                             <li><strong>11h00-12h30 Apresentação:</strong> Boas Práticas de Produção - Luis/Priscilla</li>
-                            <li><strong>12h30-14h00:</strong> Alomoço</li>
-                            <li><strong>14h00-15h45:</strong> Noções Básicas de Tecnologia - Matheus/Rafael</li>
+                            <li><strong>12h30-14h00:</strong> Almoço</li>
+                            <li><strong>14h00-15h45 Apresentação:</strong> Noções Básicas de Tecnologia - Matheus/Rafael</li>
                             <li><strong>15h45-16h00:</strong> Coffe Break</li>
                             <li><strong>16h00-17h30 Apresentação:</strong> Controle de Qualidade (Exemplos) -  Brenno</li>
                             <li><strong>19h00-21h00:</strong> Jantar</li>
@@ -119,4 +119,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
