--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <header>
         <div class="header-container">
             <div class="logos">
-                <img src="logo-sua-empresa.png" alt="Logo da Sua Empresa" class="logo-principal">
-                <img src="logo-otc-capacita.png" alt="Logo OTC Capacita" class="logo-treinamento">
+                <img src="logo laranja otc.png" alt="Logo da Sua Empresa" class="logo-principal">
+                <img src="logo capacita.png" alt="Logo OTC Capacita" class="logo-treinamento">
             </div>
             <nav>
                 <button class="nav-button active" data-tab="programacao">Programação</button>
@@ -31,13 +31,12 @@
     <main>
         <section id="programacao" class="tab-content active">
             <div class="container">
-                <h1>Programação Oficial</h1>
-                <p class="subtitle">Conectando mentes e códigos para o futuro.</p>
+                
 
                 <div class="schedule-menu-wrapper">
                     <div class="schedule-menu">
-                        <button class="day-tab" data-target-id="painel-dia-1" data-date="2025-10-06">Dia 1 <span>(05/10)</span></button>
-                        <button class="day-tab" data-target-id="painel-dia-2" data-date="2025-10-07">Dia 2 <span>(06/10)</span></button>
+                        <button class="day-tab" data-target-id="painel-dia-1" data-date="2025-10-05">Dia 1 <span>(05/10)</span></button>
+                        <button class="day-tab" data-target-id="painel-dia-2" data-date="2025-10-06">Dia 2 <span>(06/10)</span></button>
                         <button class="day-tab" data-target-id="painel-dia-7" data-date="2025-12-04">Dia 7 <span>(04/12)</span></button>
                     </div>
                 </div>
