--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                 <img src="logo capacita.png" alt="Logo OTC Capacita" class="logo-treinamento">
             </div>
             <nav>
-                
+                <button class="nav-button active" data-tab="programacao">Programação</button>
+                <button class="nav-button" data-tab="informacoes">Mais Informações</button>
             </nav>
         </div>
     </header>
@@ -97,12 +98,29 @@
         </section>
 
         <section id="informacoes" class="tab-content">
-            </section>
+             <div class="container">
+                 <h1>Sobre o OTC Capacita</h1>
+                 <div class="info-grid">
+                    <div class="info-card">
+                        <h3><i class="fa-solid fa-bullseye"></i> O Treinamento</h3>
+                        <p>Uma imersão intensiva no epicentro da inovação tecnológica, projetada para transformar seu potencial em expertise.</p>
+                    </div>
+                    <div class="info-card">
+                        <h3><i class="fa-solid fa-users"></i> Palestrantes de Elite</h3>
+                        <p>Aprenda com quem está definindo o futuro da indústria. A lista completa de palestrantes será divulgada em breve.</p>
+                    </div>
+                    <div class="info-card">
+                         <h3><i class="fa-solid fa-ticket"></i> Garanta sua Vaga</h3>
+                        <p>As vagas são limitadas para garantir uma experiência de alta qualidade. Não perca a chance de fazer parte da elite.</p>
+                        <button class="cta-button">Inscreva-se Agora</button>
+                    </div>
+                 </div>
+            </div>
+        </section>
     </main>
 
     <script src="particles.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
-
 
