--- a/index.html
+++ b/index.html
@@ -99,20 +99,19 @@
 
         <section id="informacoes" class="tab-content">
              <div class="container">
-                 <h1>Sobre o OTC Capacita</h1>
+                 <h1>Informações Gerais</h1>
                  <div class="info-grid">
                     <div class="info-card">
-                        <h3><i class="fa-solid fa-bullseye"></i> O Treinamento</h3>
-                        <p>Uma imersão intensiva no epicentro da inovação tecnológica, projetada para transformar seu potencial em expertise.</p>
+                        <h3><i class="fa-solid fa-bullseye"></i> Sobre a Imersão</h3>
+                        <p>Este evento é uma imersão completa, desenhada para promover um intenso compartilhamento de conhecimentos e experiências entre nossas equipes de todo o Brasil. Acontecerá entre os dias **02 e 07 de Dezembro de 2025**.</p>
                     </div>
                     <div class="info-card">
-                        <h3><i class="fa-solid fa-users"></i> Palestrantes de Elite</h3>
-                        <p>Aprenda com quem está definindo o futuro da indústria. A lista completa de palestrantes será divulgada em breve.</p>
+                        <h3><i class="fa-solid fa-clock"></i> Horários e Refeições</h3>
+                        <p>Para sua comodidade, o café da manhã será servido diariamente das **07h00 às 09h00**. O jantar no hotel estará disponível das **19h00 às 21h00**. Para os demais horários, por favor, consulte a aba "Programação".</p>
                     </div>
                     <div class="info-card">
-                         <h3><i class="fa-solid fa-ticket"></i> Garanta sua Vaga</h3>
-                        <p>As vagas são limitadas para garantir uma experiência de alta qualidade. Não perca a chance de fazer parte da elite.</p>
-                        <button class="cta-button">Inscreva-se Agora</button>
+                         <h3><i class="fa-solid fa-circle-info"></i> Orientações Importantes</h3>
+                        <p>Para o melhor aproveitamento do evento, pedimos atenção aos horários do cronograma. Zele por seus pertences pessoais durante as atividades e, ao final da imersão, certifique-se de verificar seu quarto para não esquecer nada.</p>
                     </div>
                  </div>
             </div>
@@ -123,6 +122,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
-
