--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 
                 <div class="schedule-content">
                     <div id="painel-dia-1" class="day-content">
-                        <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 12h00-14h00</div><h3>Almoço Hotel</h3></div>
+                        <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 12h00-14h00</div><h3>Almoço</h3></div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 15h00-16h00</div><h3><i class="fa-solid fa-person-chalkboard"></i> Abertura do Treinamento</h3></div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 16h00-17h00</div><h3>Dinâmica de Boas-Vindas</h3></div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 17h00-17h30</div><h3>Dinâmica Especial</h3></div>
-                        <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 19h00-21h00</div><h3>Jantar</h3></div>
+                        <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 19h00-21h00</div><h3>Jantar No Hotel</h3></div>
                     </div>
                     
                     <div id="painel-dia-2" class="day-content">
@@ -59,8 +59,8 @@
                         <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 12h30-14h00</div><h3>Almoço</h3></div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 14h00-15h30</div><h3><i class="fa-solid fa-person-chalkboard"></i> Noções de Departamento Pessoal</h3><p class="speaker"><i class="fa-solid fa-user"></i> Silvana/Luciana</p></div>
                         <div class="event-card break"><div class="time"><i class="fa-solid fa-mug-saucer"></i> 15h30-16h00</div><h3>Coffe Break</h3></div>
-                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 16h00-17h00</div><h3><i class="fa-solid fa-person-chalkboard"></i> Comunicação Assertiva</h3><p class="speaker"><i class="fa-solid fa-user"></i> (Colocar nome)</p></div>
-                        <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 19h00-21h00</div><h3>Jantar</h3></div>
+                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 16h00-17h00</div><h3><i class="fa-solid fa-person-chalkboard"></i> Comunicação Humanizada Com Colaboradores</h3><p class="speaker"><i class="fa-solid fa-user"></i> Simone Coelho</p></div>
+                        <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 19h00-21h00</div><h3>Jantar No Hotel</h3></div>
                     </div>
 
                     <div id="painel-dia-3" class="day-content">
@@ -72,17 +72,18 @@
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 14h00-15h45</div><h3>Noções Básicas de Tecnologia</h3><p class="speaker"><i class="fa-solid fa-user"></i> Matheus/Rafael</p></div>
                         <div class="event-card break"><div class="time"><i class="fa-solid fa-mug-saucer"></i> 15h45-16h00</div><h3>Coffe Break</h3></div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 16h00-17h30</div><h3><i class="fa-solid fa-person-chalkboard"></i> Controle de Qualidade (Exemplos)</h3><p class="speaker"><i class="fa-solid fa-user"></i> Brenno</p></div>
-                        <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 19h00-21h00</div><h3>Jantar</h3></div>
+                        <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 19h00-21h00</div><h3>Jantar No Hotel</h3></div>
                     </div>
 
                     <div id="painel-dia-4" class="day-content">
-                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 08h00-09h30</div><h3><i class="fa-solid fa-person-chalkboard"></i> Gestão de Pessoas</h3><p class="speaker"><i class="fa-solid fa-user"></i> Fernando</p></div>
-                        <div class="event-card break"><div class="time"><i class="fa-solid fa-mug-saucer"></i> 09h30-10h00</div><h3>Coffe Break</h3></div>
-                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 10h00-12h00</div><h3><i class="fa-solid fa-person-chalkboard"></i> Continuação de Gestão de Pessoas</h3><p class="speaker"><i class="fa-solid fa-user"></i> Fernando</p></div>
-                        <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 12h00-14h00</div><h3>Almoço</h3></div>
-                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 14h00-15h00</div><h3>Projetos para 2026</h3></div>
-                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 15h00-16h30</div><h3>Elaboração de Perguntas</h3></div>
-                        <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 19h00-21h00</div><h3>Jantar</h3></div>
+                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 08h00-10h00</div><h3><i class="fa-solid fa-person-chalkboard"></i> Gestão de Pessoas</h3><p class="speaker"><i class="fa-solid fa-user"></i> Fernando</p></div>
+                        <div class="event-card break"><div class="time"><i class="fa-solid fa-mug-saucer"></i> 10h00-10h15</div><h3>Coffe Break</h3></div>
+                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 10h15-12h30</div><h3><i class="fa-solid fa-person-chalkboard"></i> Continuação de Gestão de Pessoas</h3><p class="speaker"><i class="fa-solid fa-user"></i> Fernando</p></div>
+                        <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 12h30-14h00</div><h3>Almoço</h3></div>
+                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 14h00-15h00</div><h3>Elaboração de Perguntas</h3></div>
+                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 15h00-15h30</div><h3>Dinâmica de encerramento</h3></div>
+                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 08h00-10h00</div><h3><i class="fa-solid fa-person-chalkboard"></i> Etiqueta Corporativa</h3><p class="speaker"><i class="fa-solid fa-user"></i> Luciana Berto</p></div>
+                        <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 19h00-21h00</div><h3>Jantar No Hotel</h3></div>
                     </div>
 
                     <div id="painel-dia-5" class="day-content">
@@ -122,3 +123,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
