--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                 <div class="schedule-content">
                     <div id="painel-dia-1" class="day-content">
                         <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 12h00-14h00</div><h3>Almoço</h3></div>
-                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 15h00-16h00</div><h3><i class="fa-solid fa-person-chalkboard"></i> Abertura do Treinamento</h3></div>
-                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 16h00-17h00</div><h3>Dinâmica de Boas-Vindas</h3></div>
+                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 15h00-16h00</div><h3><i class="fa-solid fa-person-chalkboard"></i> Abertura do Treinamento (Vídeo + Dinâmica)</h3></div>
+                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 16h00-17h00</div><h3>Discurso de boas-vindas</h3></div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 17h00-17h30</div><h3>Dinâmica Especial</h3></div>
                         <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 19h00-21h00</div><h3>Jantar No Hotel</h3></div>
                     </div>
@@ -123,4 +123,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
