--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                     </div>
 
                     <div id="painel-dia-4" class="day-content">
-                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 08h00-10h00</div><h3><i class="fa-solid fa-person-chalkboard"></i> Gestão de Pessoas</h3><p class="speaker"><i class="fa-solid fa-user"></i> Fernando</p></div>
+                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 08h00-10h00</div><h3><i class="fa-solid fa-person-chalkboard"></i> Gestão de Pessoas</h3><p class="speaker"><i class="fa-solid fa-user"></i> Fernando Mora</p></div>
                         <div class="event-card break"><div class="time"><i class="fa-solid fa-mug-saucer"></i> 10h00-10h15</div><h3>Coffe Break</h3></div>
-                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 10h15-12h30</div><h3><i class="fa-solid fa-person-chalkboard"></i> Continuação de Gestão de Pessoas</h3><p class="speaker"><i class="fa-solid fa-user"></i> Fernando</p></div>
+                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 10h15-12h30</div><h3><i class="fa-solid fa-person-chalkboard"></i> Continuação de Gestão de Pessoas</h3><p class="speaker"><i class="fa-solid fa-user"></i> Fernando Mora</p></div>
                         <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 12h30-14h00</div><h3>Almoço</h3></div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 14h00-15h00</div><h3>Elaboração de Perguntas</h3></div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 15h00-15h30</div><h3>Dinâmica de encerramento</h3></div>
@@ -123,5 +123,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
