--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 14h00-15h45</div><h3>Noções Básicas de Tecnologia</h3><p class="speaker"><i class="fa-solid fa-user"></i> Matheus/Rafael</p></div>
                         <div class="event-card break"><div class="time"><i class="fa-solid fa-mug-saucer"></i> 15h45-16h00</div><h3>Coffe Break</h3></div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 16h00-17h30</div><h3><i class="fa-solid fa-person-chalkboard"></i> Controle de Qualidade (Exemplos)</h3><p class="speaker"><i class="fa-solid fa-user"></i> Brenno</p></div>
-                        <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 19h00-21h00</div><h3>Jantar No Hotel</h3></div>
+                        <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 19h00-21h00 - Jantar no Hotel</div>
                     </div>
 
                     <div id="painel-dia-4" class="day-content">
@@ -123,3 +123,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
