--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div>
 
                     <div id="painel-dia-4" class="day-content">
-                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 08h00-09h30</div><h3><i class="fa-solid fa-person-chalkboard"></i> Gestão de Pessoas</h3><p class="speaker"><i class="fa-solid fa-user"></i> Palestrante externo: Fernando Mora</p></div>09
+                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 08h00-09h30</div><h3><i class="fa-solid fa-person-chalkboard"></i> Gestão de Pessoas</h3><p class="speaker"><i class="fa-solid fa-user"></i> Palestrante externo: Fernando Mora</p></div>
                         <div class="event-card break"><div class="time"><i class="fa-solid fa-mug-saucer"></i> 09h30-10h00</div><h3>Coffe Break</h3></div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 10h00-12h00</div><h3><i class="fa-solid fa-person-chalkboard"></i> Continuação de Gestão de Pessoas</h3><p class="speaker"><i class="fa-solid fa-user"></i> Palestrante externo:Fernando Mora</p></div>
                         <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 12h00-14h00</div><h3>Almoço</h3></div>
@@ -133,4 +133,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
