--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                 <div class="schedule-content">
                     <div id="painel-dia-1" class="day-content">
                         <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 12h00-14h00</div><h3>Almoço</h3></div>
-                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 15h00-16h00</div><h3><i class="fa-solid fa-person-chalkboard"></i> Boas Vindas - Vídeo de abertura + dinâmica</h3></div>
-                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 16h00-16h30</div><h3>Dinâmica Especial</h3></div>
-                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 16h30-17h30</div><h3>Dinâmica "quebra gelo"</h3></div>
+                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 15h00-16h00</div><h3><i class="fa-solid fa-person-chalkboard"></i> Boas Vindas - Vídeo de abertura + dinâmica</h3><p class="speaker"><i class="fa-solid fa-user"></i>Silvana / Paulo / Leticia</p></div>
+                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 16h00-16h30</div><h3>Dinâmica Especial</h3><p class="speaker"><i class="fa-solid fa-user"></i> Silvana</p></div>
+                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 16h30-17h30</div><h3>Dinâmica "quebra gelo"</h3><p class="speaker"><i class="fa-solid fa-user"></i> Silvana/Leticia</p></div>
                         <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 19h00-21h00</div><h3>Jantar</h3></div>
                     </div>
                     
@@ -84,7 +84,7 @@
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 14h30-15h00</div><h3><i class="fa-solid fa-person-chalkboard"></i> Etiqueta Corporativa</h3><p class="speaker"><i class="fa-solid fa-user"></i> Palestrante externo:Luciane Berto</p></div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 15h00-16h00</div><h3><i class="fa-solid fa-person-chalkboard"></i> Técnicas de negociação</h3><p class="speaker"><i class="fa-solid fa-user"></i> Cláudio</p></div>
                         <div class="event-card break"><div class="time"><i class="fa-solid fa-mug-saucer"></i> 16h00-16h30</div><h3>Coffe Break</h3></div>
-                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 16h30-17h30</div><h3>Elaboração de perguntas / dinâmica de encerramento / Discurso de finalização</h3></div>
+                        <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 16h30-17h30</div><h3>Elaboração de perguntas / dinâmica de encerramento / Discurso de finalização</h3><p class="speaker"><i class="fa-solid fa-user"></i> Silvana/Paulo</p></div>
                         <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 19h00-21h00</div><h3>Jantar com música ao vivo</h3></div>
                     </div>
 
@@ -133,5 +133,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
