--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </div>
 
                     <div id="painel-dia-5" class="day-content">
-                        <div class="event-card break"><div class="time"><i class="fa-solid fa-mug-saucer"></i> 09h00-10h30</div><h3>Coffe Break</h3></div>
+                        <div class="event-card break"><div class="time"><i class="fa-solid fa-mug-saucer"></i> 09h00-10h30</div><h3>Café da Manhã</h3></div>
                         <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 12h00-15h00</div><h3>Almoço</h3></div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 15h00-16h30</div><h3>Show de pagode</h3></div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 16h30-17h00</div><h3>Sorteio de brindes</h3></div>
@@ -133,6 +133,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
