--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
                 <div class="schedule-content">
                     <div id="painel-dia-1" class="day-content">
-                        <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 12h00-14h00</div><h3>Almoço</h3></div>
+                        <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 12h00-14h00</div><h3>Almoço obs: Será disponibilizado 1 bebida sem àlcool.</h3></div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 15h00-16h00</div><h3><i class="fa-solid fa-person-chalkboard"></i> Boas Vindas - Vídeo de abertura + dinâmica</h3><p class="speaker"><i class="fa-solid fa-user"></i>Silvana / Paulo / Leticia</p></div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 16h00-16h30</div><h3>Dinâmica Especial</h3><p class="speaker"><i class="fa-solid fa-user"></i> Silvana</p></div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 16h30-17h30</div><h3>Dinâmica "quebra gelo"</h3><p class="speaker"><i class="fa-solid fa-user"></i> Silvana/Leticia</p></div>
@@ -56,7 +56,7 @@
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 08h00-10h45</div><h3><i class="fa-solid fa-person-chalkboard"></i> Conhecendo a OTC</h3><p class="speaker"><i class="fa-solid fa-user"></i> Paulo/Leticia</p></div>
                         <div class="event-card break"><div class="time"><i class="fa-solid fa-mug-saucer"></i> 10h45-11h00</div><h3>Coffe Break</h3></div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 11h00-12h00</div><h3><i class="fa-solid fa-person-chalkboard"></i> Continuação de Conhecendo a OTC</h3><p class="speaker"><i class="fa-solid fa-user"></i> Paulo/Leticia</p></div>
-                        <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 12h00-14h00</div><h3>Almoço</h3></div>
+                        <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 12h00-14h00</div><h3>Almoço obs: Será disponibilizado 1 bebida sem àlcool.</h3></div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 14h00-15h00</div><h3><i class="fa-solid fa-person-chalkboard"></i> Comunicação Assertiva</h3><p class="speaker"><i class="fa-solid fa-user"></i> Palestrante externo: Simone</p></div>
                         <div class="event-card break"><div class="time"><i class="fa-solid fa-mug-saucer"></i> 15h00-15h30</div><h3>Coffe Break</h3></div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 15h30-16h00</div><h3>Dinâmica - Comunicação</h3></div>
@@ -69,7 +69,7 @@
                         <div class="event-card break"><div class="time"><i class="fa-solid fa-mug-saucer"></i> 10h00-10h15</div><h3>Coffe Break</h3></div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 10h15-11h00</div><h3>Dinâmica: Planejamento</h3><p class="speaker"><i class="fa-solid fa-user"></i> Silvana</p></div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 11h00-12h30</div><h3><i class="fa-solid fa-person-chalkboard"></i> Boas Práticas de Produção</h3><p class="speaker"><i class="fa-solid fa-user"></i> Luis/Priscilla</p></div>
-                        <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 12h30-14h00</div><h3>Almoço</h3></div>
+                        <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 12h30-14h00</div><h3>Almoço obs: Será disponibilizado 1 bebida sem àlcool.</h3></div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 14h00-15h45</div><h3>Noções Básicas de Tecnologia</h3><p class="speaker"><i class="fa-solid fa-user"></i> Matheus/Rafael</p></div>
                         <div class="event-card break"><div class="time"><i class="fa-solid fa-mug-saucer"></i> 15h45-16h00</div><h3>Coffe Break</h3></div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 16h00-17h30</div><h3><i class="fa-solid fa-person-chalkboard"></i> Controle de Qualidade (Exemplos)</h3><p class="speaker"><i class="fa-solid fa-user"></i> Brenno/Melyssa</p></div>
@@ -80,7 +80,7 @@
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 08h00-09h30</div><h3><i class="fa-solid fa-person-chalkboard"></i> Gestão de Pessoas</h3><p class="speaker"><i class="fa-solid fa-user"></i> Palestrante externo: Fernando Mora</p></div>
                         <div class="event-card break"><div class="time"><i class="fa-solid fa-mug-saucer"></i> 09h30-10h00</div><h3>Coffe Break</h3></div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 10h00-12h00</div><h3><i class="fa-solid fa-person-chalkboard"></i> Continuação de Gestão de Pessoas</h3><p class="speaker"><i class="fa-solid fa-user"></i> Palestrante externo:Fernando Mora</p></div>
-                        <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 12h00-14h00</div><h3>Almoço</h3></div>
+                        <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 12h00-14h00</div><h3>Almoço obs: Será disponibilizado 1 bebida sem àlcool.</h3></div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 14h30-15h00</div><h3><i class="fa-solid fa-person-chalkboard"></i> Etiqueta Corporativa</h3><p class="speaker"><i class="fa-solid fa-user"></i> Palestrante externo:Luciane Berto</p></div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 15h00-16h00</div><h3><i class="fa-solid fa-person-chalkboard"></i> Técnicas de negociação</h3><p class="speaker"><i class="fa-solid fa-user"></i> Cláudio</p></div>
                         <div class="event-card break"><div class="time"><i class="fa-solid fa-mug-saucer"></i> 16h00-16h30</div><h3>Coffe Break</h3></div>
@@ -133,6 +133,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
