--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
                 <div class="schedule-content">
                     <div id="painel-dia-1" class="day-content">
-                        <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 12h00-14h00</div><h3>Almoço obs: Será disponibilizado 1 bebida sem àlcool.</h3></div>
+                        <div class="event-card break"><div class="time"><i class="fa-solid fa-utensils"></i> 12h00-14h00</div><h3>Almoço</h3><br>obs: Será disponibilizado 1 bebida sem  álcool</br>.</div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 15h00-16h00</div><h3><i class="fa-solid fa-person-chalkboard"></i> Boas Vindas - Vídeo de abertura + dinâmica</h3><p class="speaker"><i class="fa-solid fa-user"></i>Silvana / Paulo / Leticia</p></div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 16h00-16h30</div><h3>Dinâmica Especial</h3><p class="speaker"><i class="fa-solid fa-user"></i> Silvana</p></div>
                         <div class="event-card"><div class="time"><i class="fa-regular fa-clock"></i> 16h30-17h30</div><h3>Dinâmica "quebra gelo"</h3><p class="speaker"><i class="fa-solid fa-user"></i> Silvana/Leticia</p></div>
@@ -133,6 +133,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
