--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@
                          <h3><i class="fa-solid fa-circle-info"></i> Orientações Importantes</h3>
                         <p>Para o melhor aproveitamento do evento, pedimos atenção aos horários do cronograma. Zele por seus pertences pessoais durante as atividades e, ao final da imersão, certifique-se de verificar seu quarto para não esquecer nada.</p>
                     </div>
+
+                    <div class="info-card">
+                         <h3><i class="fa-solid fa-circle-info"></i> Sobre Bebidas no Hotel</h3>
+                        <p>Bebidas solicitadas no bar do hotel são de responsabilidade do hóspede.</p>
+                    </div> 
                  </div>
             </div>
         </section>
@@ -133,6 +138,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
